--- a/main.tex
+++ b/main.tex
@@ -49,11 +49,14 @@
 	% Machine Learning Model Design
 	\include{chapter4}
 
-	% Evaluation
+	% Data Set Preparation
 	\include{chapter5}
 
-	% Conclusion
-	\include{chapter6}
+	% Evaluation
+	\include{chapter8}
+
+	% Summary
+	\include{chapter9}
 	\cleardoublepage
 	
 	% bibliography 
